Full functionality for stop timetable, reverting endpoint path changes
